<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.weslleystos.emonitoria.auth.login.vm.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".auth.login.ui.LoginFragment">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@id/txt_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/welcome_instructions"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email"
            style="@style/StyleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/edt_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_instructions"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_10_dp"
                android:fontFamily="@font/nunito_semibold"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={viewModel.email}"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password"
            style="@style/StyleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/btn_recover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_10_dp"
                android:fontFamily="@font/nunito_semibold"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.password}"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_recover"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:enabled="@{!viewModel.isLoading}"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:enabled="@{!viewModel.isLoading &amp;&amp; viewModel.isValidEmail &amp;&amp; viewModel.isValidPassWord}"
            android:fontFamily="@font/nunito_semibold"
            android:imeOptions="actionDone"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{() ->  viewModel.doLogin(viewModel.email, viewModel.password)}"
            android:text="@{!viewModel.isLoading ? @string/login : @string/login2}"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@id/txt_access_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_recover"
            tools:text="@string/login" />

        <TextView
            android:id="@+id/txt_access_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/access_by"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btn_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <TextView
            android:id="@+id/btn_facebook"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:drawablePadding="8dp"
            android:enabled="@{!viewModel.isLoading}"
            android:text="@string/facebook"
            app:drawableStartCompat="@drawable/ic_facebook"
            app:layout_constraintBottom_toTopOf="@id/register"
            app:layout_constraintEnd_toStartOf="@+id/btn_google"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_access_by"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/btn_google"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:drawablePadding="8dp"
            android:enabled="@{!viewModel.isLoading}"
            android:text="@string/google"
            app:drawableStartCompat="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="@+id/btn_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_facebook"
            app:layout_constraintTop_toTopOf="@+id/btn_facebook"
            tools:ignore="UnusedAttribute" />


        <TextView
            android:id="@+id/register"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:first="@{@string/dont_have_account}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
            app:primary="@{@color/black}"
            app:second="@{@string/register}"
            tools:text="@string/no_account" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>