<resources>
    <string name="app_name">E-Monitoria</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="login">Entrar</string>
    <string name="login2">Entrando…</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="access_by">Acessar via</string>
    <string name="welcome">Bem-vindo,</string>
    <string name="welcome_instructions">Autentique-se para continuar.</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="invalid_email">E-mail inválido!</string>
    <string name="invalid_user">Usuário inválido!</string>
    <string name="registered_user">Usuário já tem cadastro!</string>
    <string name="required_field">* Campo obrigatório!</string>
    <string name="password_less_then">A senha deve ter pelo menos %d caracteres</string>
    <string name="name_less_than">O nome deve ter pelo menos %d caracteres</string>
    <string name="password_more_then">A senha não deve exceder %d caracteres</string>
    <string name="passwords_different">As senhas são diferentes</string>
    <string name="register">Cadastrar-se</string>
    <string name="already_account">Já tem conta?</string>
    <string name="dont_have_account">Não tem conta?</string>
    <string name="invalid_login">E-mail e/ou senha inválido</string>
    <string name="something_wrong">Algo deu errado! tente novamente mais tarde.</string>
    <string name="success">Sucesso</string>
    <string name="email_sent">E-mail enviado</string>
    <string name="no_account">Não tem conta? Cadastre-se</string>

    <string name="logo_description">Logo do aplicativo</string>
    <string name="recovery_instructions">Insira seu e-mail para resetar sua senha</string>

    <string name="reset">Resetar</string>
    <string name="sending">Enviando…</string>
</resources>