...
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.github.weslleystos.emonitoria.splash.ui.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/toHomeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@+id/splashFragment"
            app:popUpToInclusive="true" />

        <action
...
